Added functionality to encrypt each share with a unique AES key. Each AES key is encrypted with a unique RSA key pair.